z-index fixed for publication and timeline

--- a/styling/publication.css
+++ b/styling/publication.css
@@ -188,6 +188,9 @@ body{
         height: 100%;
         z-index: 1; 
     }
+    .topbar-artists-open{
+        z-index: 999;
+    }
 }
 
 @media only screen and (max-width: 1350px)  {
